[package]
name = "baml-python-ffi"
edition = "2021"
version = "0.1.0"
authors.workspace = true
description = "BAML python bindings (Cargo.toml)"
license = "Apache-2.0"

[lib]
name = "baml_py"
crate-type = ["rlib"]  # so that we can import `parse_py_types`

[dependencies]
anyhow.workspace = true
baml-types.workspace = true
baml-runtime = { path = "../baml-runtime", default-features = false, features = [
  "internal",
] }
internal-baml-codegen.workspace = true
internal-baml-jinja = { path = "../baml-lib/jinja" }
env_logger.workspace = true
futures.workspace = true
indexmap.workspace = true
log.workspace = true
#pyo3-asyncio = { version = "0.20.0", features = ["tokio-runtime"] }
# pythonize = "0.22"
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["full"] }

[dependencies.pyo3]
git = "https://github.com/liammcinroy/pyo3"
branch = "nofreeze"
default-features = false
features = [
  "abi3-py38",
  "extension-module",
  "generate-import-lib",
  "serde",
]

[dependencies.pyo3-asyncio]
# pyo3-asyncio head is still on 0.20.0; someone's done the work of updating it to 0.22 and Bound<>,
# but that work hasn't been merged yet. it builds though, and looks good to me!
# https://github.com/awestlake87/pyo3-asyncio/pull/121
git = "https://github.com/liammcinroy/pyo3-asyncio.git"
branch = "migration-pyo3-0.22"
features = [
  "tokio-runtime",
]

[dependencies.pythonize]
# since we use a fork of pyo3, then use a fork of pythonize to prevent a
# irresolvable mix of `pyo3-ffi`
git = "https://github.com/liammcinroy/pythonize"
branch = "migration-fork-nofreeze"


[build-dependencies]
pyo3-build-config = "0.21.2"
